syntax = "proto3";

package leaderboard.v1;

option go_package = "github.com/tmythicator/ticker-rush/server/internal/proto/leaderboard/v1;leaderboard";

message LeaderboardEntry {
  int64 user_id = 1;
  int32 rank = 2;
  double total_net_worth = 3;
  string first_name = 4;
  string last_name = 5;
}

message GetLeaderboardRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetLeaderboardResponse {
  repeated LeaderboardEntry entries = 1;
  int32 total_count = 2;
}

service LeaderBoardService {
  rpc GetLeaderboard(GetLeaderboardRequest) returns (GetLeaderboardResponse);
}
