syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tmythicator/ticker-rush/server/internal/proto/user/v1;user";

message PortfolioItem {
  string stock_symbol = 1;
  double quantity = 2;
  double average_price = 3;
}

message User {
  int64 id = 1;
  string email = 2;
  string password_hash = 3;
  double balance = 4;
  google.protobuf.Timestamp created_at = 6;
  string first_name = 7;
  string last_name = 8;
  map<string, PortfolioItem> portfolio = 9;
}
